--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "dpic-2013.03.10.tar.gz": 44e689286898cdb809260f2b4a48e8d9988ac826
+  dpic-2023.06.01.tar.gz: f27879e2f1277dbec93ba455564c182bbc97ed2f
